# ChangeLog for dev-python/nose2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*nose2-0.4 (18 Jun 2012)

  18 Jun 2012; James Rowe <jnrowe@gmail.com> +nose2-0.4.ebuild,
  +files/nose2-0.4-include_nose2_tools.patch,
  +files/nose2-0.4-remote_version_specific_runners.patch, +metadata.xml,
  +watch:
  Initial ebuild, by me [620].
