@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Jun 2012; James Rowe <jnrowe@gmail.com> nose2-0.4.ebuild:
+  Removed redundant src_prepare.
+
 *nose2-0.4 (18 Jun 2012)
 
   18 Jun 2012; James Rowe <jnrowe@gmail.com> +nose2-0.4.ebuild,
